[FIX] commit after user review v4.3

--- a/static/src/scss/ccpp.scss
+++ b/static/src/scss/ccpp.scss
@@ -5,3 +5,11 @@
       max-width: 100%;
   }
 }
+
+.o_parent_job_narrow_field {
+  width: 30rem!important;
+  max-width: 30rem!important;
+  * {
+      max-width: 100%;
+  }
+}
