--- a/views/ccpp_sale_target_view.xml
+++ b/views/ccpp_sale_target_view.xml
@@ -26,6 +26,7 @@
                     <!--<filter string="Order Year" name="order_year" context="{'order_by': 'year_text desc'}"/>-->
                     <filter string="Period" name="groupby_sales_area" context="{'group_by': 'period'}"/>
                     <filter string="Status" name="groupby_status" context="{'group_by': 'status'}"/>
+                    <filter string="Job Position" name="groupby_job" context="{'group_by': 'job_id'}"/>
                 </group>
             </search>
         </field>
@@ -44,7 +45,7 @@
                 <field name="target" sum="sum_target"/>
                 <field name="actual" sum="sum_actual"/>
                 <field name="actual_percent" widget="progressbar"/>
-                <field name="sale_person_id"/>
+                <field name="job_id"/>
                 <field name="status_color" invisible="1"/>
                 <field name="status" readonly="True" widget="status_with_color_ccpp" options="{'color_field': 'status_color'}"/>
             </tree>
@@ -67,7 +68,7 @@
                         <group>
                             <field name="target"/>
                             <field name="actual"/>
-                            <field name="sale_person_id"/>
+                            <field name="job_id"/>
                         </group>
                     </group>
                 </sheet>
