--- a/views/rocker_timesheet_views.xml
+++ b/views/rocker_timesheet_views.xml
@@ -22,9 +22,11 @@
                         <field name="project_id" string="Project" icon="fa-folder-open"/>
                         <field name="customer_potential" string="Customer Potential" icon="fa-folder-open"/>-->
                     </searchpanel>
+                    <filter string="Open" name="open" domain="[('state', '=', 'open')]"/>
+                    <filter string="Done" name="done" domain="[('state', '=', 'done')]"/>
                     <group expand="0" string="Group By">
                         <filter string="Sales Person" name="groupby_sales_person" context="{'group_by': 'employee_id'}"/>
-                        <filter string="Month" name="groupby_month" context="{'group_by': 'start'}"/>
+                        <filter string="Month" name="groupby_month" context="{'group_by': 'start:day'}"/>
                     </group>
                 </search>
             </field>
@@ -52,7 +54,7 @@
                     <field name="company_id" required="1" readonly="1" optional="hide" invisible="1"/>
                     <field name="user_id"  invisible="1" required="1" readonly="1"/>
                     <field name="allday" invisible="1" />
-                    <field name="state" invisible="1" />
+                    <field name="state" invisible="0" />
                     <button name="update_situation" type="object" string="Check In" class="btn btn-success" icon="fa-sign-in" attrs="{'invisible': [('state','not in',['open'])]}"/>
 
                 </tree>
@@ -321,18 +323,21 @@
 
                                         <field name="project_id" required="0" string="CCPP"
                                         domain="[('company_id', '=', company_id),('id', 'in', domain_ccpp_ids)]"
-                                        attrs="{'invisible': [('is_go_ccpp_customer','=',False)]}"/>
+                                        attrs="{'invisible': [('is_go_ccpp_customer','=',False)]}"
+                                        options="{'no_create':True}"/>
                                         <field name="task_id" required="0" string="Solution"
                                                 domain="[('project_id', '=', project_id), 
                                                          ('is_solution', '=', True),
                                                          ('state', '=', 'process')]"
-                                                attrs="{'invisible': [('is_go_ccpp_customer','=',False)]}"/>
+                                                attrs="{'invisible': [('is_go_ccpp_customer','=',False)]}"
+                                                options="{'no_create':True}"/>
                                         <field name="task_strategy_id" string="Strategy"
                                                 domain="[('project_id', '=', project_id),
                                                          ('parent_id', '=', task_id),
                                                          ('is_strategy', '=', True),
                                                          ('state', '=', 'process')]"
-                                                attrs="{'invisible': [('is_go_ccpp_customer','=',False)]}"/>
+                                                attrs="{'invisible': [('is_go_ccpp_customer','=',False)]}"
+                                                options="{'no_create':True}"/>
                                         <!--<label for="unit_amount"  string="Actual Work" invisible="0"/>
                                         <div>
                                             <field name="unit_amount" invisible="0" required="1" widget="float_time" class="oe_inline" readonly="0"/>
@@ -481,13 +486,13 @@
         -->
 
         <record id="act_rocker_timesheet_tree" model="ir.actions.act_window">
-            <field name="name">Tasks</field>
+            <field name="name">Check In</field>
             <field name="res_model">account.analytic.line</field>
             <field name="domain">[('user_id', '=', uid)]</field>
             <field name="view_mode">tree,form</field>
             <field name="view_id" ref="rocker_timesheet_tree"/>
             <field name="search_view_id" ref="rocker_timesheet_search"/>
-            <field name="context">{'search_default_groupby_month': 1}</field>
+            <field name="context">{'search_default_groupby_month': 1, 'search_default_open': 1}</field>
             <field name="target">main</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
@@ -505,7 +510,7 @@
             <field name="view_mode">tree,form</field>
             <field name="view_id" ref="rocker_timesheet_tree"/>
             <field name="search_view_id" ref="rocker_timesheet_search"/>
-            <field name="context">{'search_default_groupby_sales_person': 1, 'search_default_groupby_month': 1}</field>
+            <field name="context">{'search_default_groupby_sales_person': 1, 'search_default_groupby_month': 1, 'search_default_open': 1}</field>
             <field name="target">main</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
